tests/snapshots/collapsing__empty_block_with_whitespace_and_html-2.snap
---
source: tests/collapsing.rs
expression: formatted_output
---
<div>
    {%~ block content ~%}{%~ endblock ~%}
</div>
