tests/snapshots/collapsing__empty_block_with_whitespace_and_html.snap
---
source: tests/collapsing.rs
expression: input
---
<div>
{%~ block content ~%}     {%~ endblock ~%}
</div>
